--- a/Process.html
+++ b/Process.html
@@ -23,7 +23,7 @@
       <li>
         <div class = "dropdown">
           <button class = "dropbtn">
-            <a href="Web.html">Home</a>
+            <a href="index.html">Home</a>
           </button>
         </div>
       </li>
