--- a/Comparison.html
+++ b/Comparison.html
@@ -18,7 +18,7 @@
     </div>
     <div class = "row navbar" id="topnav" style = "padding: 0px 0px;"> 
       <div class = "col-md-12">
-        <a href = "Web.html" style = "float: left;">Home</a>
+        <a href = "index.html" style = "float: left;">Home</a>
         <a href = "Data.html">Data</a>
         <a href = "Comparison.html">Comparison</a>
         <div class="dropdown">
